--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "pyroomba"]
 	path = pyroomba
-	url = git://github.com/jon/pyroomba.git
+	url = https://github.com/jon/pyroomba
 [submodule "Retaliation"]
 	path = Retaliation
 	url = https://github.com/codedance/Retaliation
